security/network_policies/db-job/allow.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-job
  namespace: db-job
spec:
  podSelector:
    matchLabels:
      app: cron
  policyTypes:
  - Egress
  egress:
  - to:  
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: db
        podSelector:
          matchLabels:
            app.kubernetes.io/name: postgresql
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: db-2
        podSelector:
          matchLabels:
            app.kubernetes.io/name: postgresql
      - namespaceSelector:
         matchLabels:
          kubernetes.io/metadata.name: kube-system
        podSelector:
         matchLabels:
          k8s-app: kube-dns
