security/network_policies/db-job/deny.yml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-traffic
  namespace: db-job
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
